# llm_fa

./: .gitignore  README.md  TRACE_CONVENTIONS.md  bench.py  bench_results.txt  faux.cu  faux.py  llm_fa.cu  llm_fa.py  profiler.cuh  pyproject.toml  redist_v8d.cu  redist_v8d.py  scaffolding.cu  scaffolding.py  trace_chain.py  trace_dump.py  validate.py
.claude/agents/: trace-builder.md
